# jo12bar_os

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
jo12bar-os-kernel/: Cargo.toml
jo12bar-os-kernel/src/: allocator.rs  core_locals.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  prelude.rs  serial.rs
jo12bar-os-kernel/src/cpu/: mod.rs
jo12bar-os-kernel/src/graphics/: canvas.rs  framebuffer.rs  mod.rs
jo12bar-os-kernel/src/graphics/tty/: color.rs  mod.rs  sgr.rs
jo12bar-os-kernel/src/mem/: mod.rs
jo12bar-os-kernel/src/mem/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
jo12bar-os-kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  task_impl.rs
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  main.rs
mem-util/: Cargo.toml
mem-util/src/: lib.rs  types.rs
mem-util/src/sync/: lock_cell.rs  mod.rs  ticket_lock.rs
src/: cli.rs  main.rs
