[package]
name = "jo12bar-os-runner"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

default-run = "jo12bar-os-runner"

[workspace]
members = ["jo12bar-os-kernel"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = "0.11.7"
jo12bar-os-kernel = { path = "jo12bar-os-kernel", artifact = "bin", target = "x86_64-unknown-none" }
