[package]
name = "jo12bar-os-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

default-run = "jo12bar-os-runner"

[workspace]
members = ["jo12bar-os-kernel", "mem-util"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bootloader = "0.11.7"
bootloader_api = "0.11.7"
crossbeam-queue = { version = "0.3.11", default-features = false, features = [
    "alloc",
] }
derive_builder = { version = "0.20.0", git = "https://github.com/Wasabi375/rust-derive-builder", branch = "owned_custom_default", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
x86_64 = "0.15.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
static_assertions = "1.1.0"
uart_16550 = "0.3.0"
paste = "1.0.15"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader.workspace = true
jo12bar-os-kernel = { path = "jo12bar-os-kernel", artifact = "bin", target = "x86_64-unknown-none" }
