[package]
name = "jo12bar-os-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jo12bar-os-kernel"
test = false
bench = false

[dependencies]
mem-util = { path = "../mem-util" }

bootloader_api.workspace = true
embedded-graphics = "0.8.1"
# bootloader-x86_64-common = "0.11.7"
log = { version = "0.4.21", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
spinning_top = "0.3.0"
x86_64.workspace = true
lazy_static.workspace = true
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"
static_assertions.workspace = true
linked_list_allocator = "0.10.5"
# embedded-text = { version = "0.7.1", features = ["ansi"] }
# ringbuffer = { version = "0.15.0", default-features = false }
